# nexus-console

./: .env.example  .gitignore  README.md  docker-compose.yml
console/: Dockerfile  README.md  pyproject.toml
console/agent_templates/: README.md  _schema.md  bull_bear_debate_pair.md  catalog.json  fundamental_analyst.md  macro_context_agent.md  market_research_analyst.md  memory_reflector.md  risk_committee.md
console/agent_templates/back-office/: banking_operations.md  budget_tracking.md  calendar_management.md  candidate_sourcing.md  cash_flow_forecasting.md  collections.md  compliance_signoff.md  contract_lifecycle.md  crm_sync.md  document_filing.md  email_triage_office.md  entity_compliance.md  expense_categorization.md  goal_pacing.md  hiring_decisions.md  hr_policy_assistant.md  invoice_generation.md  onboarding_training.md  payment_tracking.md  revenue_reporting.md  screening_scheduling.md  spend_authority.md
console/agent_templates/customer/: advocacy_referrals.md  churn_prediction.md  community_moderation_cx.md  engagement_replies.md  escalations.md  event_coordination.md  expansion_playbook.md  faq_self_serve.md  health_scoring.md  macro_authoring.md  onboarding_journeys.md  qbr_prep.md  renewal_negotiation.md  save_calls.md  strategic_customer_accounts.md  ticket_triage.md
console/agent_templates/deals/: agreement_drafting.md  call_capture.md  closing_the_deal.md  (+25 more)
console/app/: __init__.py  db.py  main.py
console/migrations/: env.py
console/tests/: conftest.py  test_agent_templates.py  test_area_recommender.py  test_bootstrap_flow.py  test_cloud_deployers.py  test_command_log.py  test_complete_remote.py  test_deployer.py  test_ecosystem.py  test_health.py  test_host_capabilities.py  test_integrations.py  test_kernel.py  test_local_inference.py  test_local_models_api.py  test_managed_platform_schemas.py  test_real_estate_workflows.py  test_stack_provisioning.py  test_stack_recommender.py  test_voicebox.py  test_wizard.py
(+430 files in other folders)
