[project]
name = "nexus-console"
version = "0.1.0"
description = "Nexus Console — control plane for Nexus OS"
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Ironbat Digital LLC", email = "hello@ironbat.digital" },
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "redis>=5.2",
  "httpx>=0.28",
  "cryptography>=44.0",
  "pyjwt[crypto]>=2.10",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
